--- a/src/main/resources/templates/boardwrite.html
+++ b/src/main/resources/templates/boardwrite.html
@@ -28,7 +28,7 @@
     <div class="layout">
         <h3>게시글 작성</h3>
       <form action="/board/writepro" method="post">
-        <input type="text" name="title">
+        <input type="text" name="title" placeholder="제목">
         <textarea name="content"></textarea>
 
         <button type="submit">작성</button>
