--- a/src/main/resources/templates/boardwrite.html
+++ b/src/main/resources/templates/boardwrite.html
@@ -28,10 +28,15 @@
     <div class="layout">
         <h3>게시글 작성</h3>
       <form action="/board/writepro" method="post">
-        <input type="text" name="title" placeholder="제목">
-        <textarea name="content"></textarea>
+          <label> 제목
+              <input type="text" name="title">
+          </label>
+          <br>
+          <label> 내용
+              <textarea name="content"></textarea>
+          </label>
 
-        <button type="submit">작성</button>
+          <button type="submit">작성</button>
       </form>
     </div>
 </body>
