super simple update, delete, login, logout

--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -21,7 +21,7 @@
     <td th:text="${member.memberPassword}"></td>
     <td th:text="${member.memberName}"></td>
     <td>
-      <a th:href="@{|/member/${membet.id}|}">조회</a>
+      <a th:href="@{|/member/${member.id}|}">조회</a>
     </td>
     <td>
       <a th:href="@{|/member/delete/${member.id}|}">삭제</a>
