--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>index</title>
@@ -10,5 +10,6 @@
 <a href="/member/login">로그인</a>
 <a href="/member/">회원목록</a>
 <a href="/board/write">게시판쓰기</a>
+<a th:if="${session.loginEmail}!=null" href="/member/myinfo">내정보보기</a>
 </body>
 </html>
